# test_tmp_proj

./: CMakeLists.txt
app/: animal.cpp  animal.hpp  cat.cpp  cat.hpp  dog.cpp  dog.hpp  funcs.cpp  funcs.hpp  main.cpp
cmake/: common.cmake
targets/: main.cpp
tests/: CMakeLists.txt  first.cpp
